infrastructure-modules/vpc/4-nat.tf
resource "aws_eip" "this" {
    vpc = true

    tags = {
        Name = "${var.env}-nat"
    } 
}

resource "aws_nat_gateway" "this" {
    allocation_id = aws_vpc.this.id
    subnet_id    = aws_subnet.public[0].id

    tags = {
        Name = "${var.env}-nat"
    }

    depends_on = [aws_internet_gateway.this]
}
